# molimg

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
molimg/: __init__.py  draw.py  excel.py  helpers.py
tests/: .coverage  conftest.py  pytest.ini  test_draw.py  test_excel.py  test_helpers.py  test_xlsxwriter.py
tests/data/: example_data.csv
