[tool.poetry]
name = "molimg"
version = "0.1.0"
description = ""
authors = ["jdkern11 <josephdanielkern@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jdkern11/molimg.git"

[tool.poetry.dependencies]
python = "^3.10"
rdkit = "^2022.9.4"
pandas = "^1.5.3"
xlsxwriter = "^3.0.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
